<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_Shimmer"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="Shimmer" />

    <item
        android:id="@+id/navigation_Jitter"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="Jitter" />

</menu>
