...
        app:layout_constraintHorizontal_bias="0.5
"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mic_button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/mic_button"
        android:layout_width="128dp"
        android:layout_height="128dp"
...
