<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="?attr/actionBarSize"
    >

    <TextView
        android:id="@+id/shimmer_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintWidth_percent="0.1"
        tools:layout_editor_absoluteX="0dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/shimmer_line_chart"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shimmer_text_view"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintWidth_percent="0.8">

    </com.github.mikephil.charting.charts.LineChart>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonDateLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shimmer_line_chart"
        app:layout_constraintWidth_percent="0.1">


        <ImageButton
            android:id="@+id/startDate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/background_button"
            android:src="@drawable/ic_date_range_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.15" />

        <TextView
            android:id="@+id/endDateDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="Choisissez la date que vous souhaitez voir"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1.0" />


        <ImageButton
            android:id="@+id/resetDate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/background_button"
            android:src="@drawable/ic_replay_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.90"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.10" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>